--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -116,7 +116,9 @@
     </div>
     <div class="server-info-row">
       <a href="https://github.com/elimS2" target="_blank" class="github-link">
-        <span class="nav-icon nav-icon-github"></span>GitHub: elimS2
+        <span class="nav-icon nav-icon-github"></span>
+        <span class="github-text">GitHub: elimS2</span>
+        <img class="github-avatar" src="https://github.com/elimS2.png?size=50" alt="elimS2 avatar" width="25" height="25" loading="lazy" decoding="async" referrerpolicy="no-referrer" onerror="this.style.display='none'" />
       </a>
     </div>
   </div>
